Make KtLintCompat0Dot48Dot0AdapterTest workable
https://github.com/pinterest/ktlint/blob/2642124cfec306050dd0258870a16dc95aaa106c/build-logic/src/main/kotlin/ToolchainForTests.kt#L16-L35